--- a/src/app/employee/emp-home/emp-home.component.html
+++ b/src/app/employee/emp-home/emp-home.component.html
@@ -1,1 +1,62 @@
-<p>emp-home works!</p>
+<mat-sidenav-container class="wrapper">
+    <mat-sidenav #sidenav mode="side" [(opened)]="opened">
+       <div>
+        <div class="sidebar">
+            <div class="top">
+                <span class="title_text">
+                    Aditya Co.
+                </span>
+            </div>
+            <div class="menu">
+                <div [ngClass]="'menu_item'">
+                    <button mat-button class="menu-button" routerLink="/dashbaord" routerLinkActive="active">
+                        <mat-icon id="dash_board">dashboard</mat-icon>
+                        <span>Dashboard</span>
+                    </button>
+                    <div>
+                       
+                <button mat-button class="menu-button" routerLink="/sale" routerLinkActive="active">
+                    <mat-icon>local_grocery_store</mat-icon>
+                    <span>Sale</span>
+                </button>
+                <button mat-button class="menu-button" routerLink="/stock_report" routerLinkActive="active">
+                    <mat-icon>local_grocery_store</mat-icon>
+                    <span>Stock </span>
+                </button>
+                <button mat-button class="menu-button" routerLink="/dues" routerLinkActive="active">
+                    <mat-icon>payment</mat-icon>
+                    <span>Dues</span>
+                </button>
+                <button mat-button class="menu-button" routerLink="/reciept" routerLinkActive="active">
+                    <mat-icon>receipt</mat-icon>
+                    <span>Reciept</span>
+                </button>
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
+
+    </mat-sidenav>
+    <mat-sidenav-content>
+        <div class="content">
+            <div class="toolbar">
+                <mat-toolbar>
+                    <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
+                    <div class="user">
+                        <span class="loginas">Login As : {{name}}</span>
+                        <mat-icon class="user-icon" [matMenuTriggerFor]="menu">account_circle</mat-icon>
+                        <mat-menu #menu="matMenu" class="myMenu">
+                        <a href="/home">  <button mat-menu-item  (click)="Logout()" >logout</button>   </a>                               
+                        </mat-menu>
+                    </div>
+                </mat-toolbar>
+            </div>
+            <div class="main">
+                <router-outlet></router-outlet>  
+                <lib-ng-toast></lib-ng-toast>
+                                     
+            </div>
+        </div>
+    </mat-sidenav-content>
+</mat-sidenav-container>
