--- a/src/app/employee/emp-dashboard/emp-dashboard.component.css
+++ b/src/app/employee/emp-dashboard/emp-dashboard.component.css
@@ -50,7 +50,15 @@
     margin-top: 10px;
     margin-left: 1%;
   }
-
+    /* .thumbnail {
+      width: 27%;
+      height: 100px;
+      float: left;
+      margin-top: 5%;
+      margin-left: 4.4%;
+  
+    } */
+  
     .thumbnail span {
       font-size: 20px;
       line-height: 25px;
@@ -63,6 +71,27 @@
       font-size: 30px;
       margin-top: 35px;
     }
+  
+    /* .main_thumbnail {
+      padding-right: 10px;
+    }
+  
+    mat-icon {
+      width: 20px;
+      height: 20px;
+      font-size: 10px;   
+    }
+  
+    .thumbnail span {
+      font-size: 20px;
+      line-height: 25px;
+      margin-left: 20px;
+    }
+  
+    .thumbnail span {
+      line-height: 15px;
+  
+    } */
   
   }
   
@@ -77,7 +106,12 @@
       margin-right: 0px;
       margin-top: 8px
     }
-  
+    /* .thumbnail {
+      width: 45%;
+      height: 100px;
+      float: left;
+      margin-top: 20px ;
+    } */
   
     .thumbnail span {
       font-size: 20px;
@@ -98,7 +132,13 @@
     .main_thumbnail {
       padding-right: 0px;
     }
-
+  /* .thumbnail{
+    width: 32%;
+    height: 100px;
+    margin-left: 1%;
+    margin-right: 0px;
+    margin-top: 8px
+  } */
     .thumbnail {
       width: 90%;
       height: 100px;
@@ -114,7 +154,10 @@
     }
   
     mat-icon {
+      /* width: 30px; */
+      /* height: 30px; */
       font-size: 28px;
+      /* margin-top: 35px; */
       margin: 35px 0px 0px 0px;
       
     }
