--- a/src/app/employee/emp-login/emp-login.component.html
+++ b/src/app/employee/emp-login/emp-login.component.html
@@ -2,7 +2,7 @@
     <div style="float: right;"><button mat-raised-button class="up_btn" (click)="admin_login()">Admin Login</button></div>
     <mat-card class="example-card">
         <mat-card-header>
-          Admin Login
+          Employee Login
         </mat-card-header>
         <mat-card-content>
                 <mat-icon class="icon_1">account_circle</mat-icon>
@@ -10,7 +10,7 @@
                 <form [formGroup]="LoginForm">
                 <mat-form-field class="example-full-width">
                     <mat-label>Username</mat-label>
-                    <input matInput placeholder="Enter your name" formControlName="username" autocomplete="false">
+                    <input matInput placeholder="Enter your name" formControlName="emp_email" autocomplete="false">
                 </mat-form-field>
                 <mat-icon class="icon_2">lock</mat-icon>
                 <mat-form-field appearance="fill">
