--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -78,4 +78,128 @@ mat-sidenav{
     padding: 0px;
   }  
   }
+
+
+  /* for dashboard */
+
   
+  .top {
+    width: 100%;
+    height: 62px;
+    z-index: 9;
+    background-color: rgb(20, 89, 92);
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.5);
+    position: sticky;
+    top: 0px;
+
+}
+
+.title_text {
+    color: whitesmoke;
+    font-size: 23px;
+    position: relative;
+    top: 20px;
+    margin-left: 20px;
+}
+
+.menu-button {
+    width: 100%;
+    font-size: 16px;
+    color: whitesmoke;
+    /* margin-top:7px; */
+    display: flex;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.menu-button span {
+    margin-left: 10px;
+}
+
+.menu-button:hover:not(.active) {
+    background-color: #14595c;
+
+}
+
+.active {
+    background-color: #05363c;
+    z-index: 6;
+}
+
+.menu-button:focus {
+    background-color: rgb(15, 108, 108);
+    box-shadow: 5px 5px 5px rgb(0 0 0 / 50%) inset;
+}
+
+#report_dropdown_item {
+    display: none;
+}
+
+#dropdown_item {
+    display: none;
+}
+#dropdown_item2 {
+    display: none;
+}
+
+.report_dropdown:hover .report_dropdown_item {
+    display: block;
+}
+
+button {
+    border-bottom: 0.2px solid #23a09cd6;
+    transition: 0.5s;
+
+}
+
+button:hover {
+    padding-left: 25px;
+}
+#dropdown_item button{
+    padding-left: 35px;
+}
+#dropdown_item button:hover{
+    padding-left: 45px;
+    
+}
+#dropdown_item2 button{
+    padding-left: 35px;
+}
+#dropdown_item2 button:hover{
+    padding-left: 45px;
+    
+}
+#report_dropdown_item button{
+    padding-left: 35px;
+}
+#report_dropdown_item button:hover{
+    padding-left: 45px;
+    
+}
+
+
+
+/* ===========================================media Query================================================== */
+
+@media(max-width:420px) {
+
+    img {
+        width: 50px;
+        height: 40px;
+    }
+
+    .title_text {
+        font-size: 20px;
+    }
+
+    .menu-button {
+        font-size: 13px;
+        color: whitesmoke;
+    }
+    .menu-button span{
+        margin-left: 5px;
+    }
+    .menu-button mat-icon{
+        font-size: 16px;
+        margin-top: 6px;
+    }
+}
