--- a/src/app/admin/add-edit-material-handover/add-edit-material-handover.component.html
+++ b/src/app/admin/add-edit-material-handover/add-edit-material-handover.component.html
@@ -98,13 +98,13 @@
 
             <ng-container matColumnDef="Action">
               <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
-              <td class="data" mat-cell *matCellDef="let row"> <mat-icon>edit</mat-icon></td>
+              <td class="data" mat-cell *matCellDef="let row" > <mat-icon (click)="del_matrial(row)" class="del_btn">delete</mat-icon></td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             <tr class="mat-row" *matNoDataRow>
-              <td class="mat-cell" colspan="7">No data show"{{input.value}}"</td>
+              <td class="mat-cell" colspan="7">No data show "{{input.value}}"</td>
             </tr>
           </table>
         </div>
