--- a/src/app/admin/add-edit-material-handover/add-edit-material-handover.component.html
+++ b/src/app/admin/add-edit-material-handover/add-edit-material-handover.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
   <span class="example-spacer">Material Handover</span>
-  <mat-icon mat-dialog-close>cancel</mat-icon>
+  <mat-icon mat-dialog-close routerLink="/material_handover">cancel</mat-icon>
 </mat-toolbar>
 <span>Select Employee</span>
 <div mat-dialog-content>
@@ -98,7 +98,7 @@
 
             <ng-container matColumnDef="Action">
               <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
-              <td class="data" mat-cell *matCellDef="let row" > <mat-icon (click)="del_matrial(row)" class="del_btn">delete</mat-icon></td>
+              <td class="data" mat-cell *matCellDef="let row" > <mat-icon (click)="del_mh(row)" class="del_btn">delete</mat-icon></td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
