--- a/src/app/admin/purchase/purchase.component.html
+++ b/src/app/admin/purchase/purchase.component.html
@@ -1,7 +1,7 @@
 <div id="wrapper">
   <div class="view_notice">
     <span class="notice_text">Purchase Details</span>
-    <mat-icon id="add_purchase" routerLink="/add_edit_purchase">add_circle</mat-icon>
+    <mat-icon id="add_purchase" [routerLink]="['add_edit_purchase']">add_circle</mat-icon>
   </div>
   <div class="count_search">
     <span class="notice_text"> Total :{{pur_count}}</span>
