--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 <ngx-ui-loader fgsColor="#098572" pbColor="#098572" text="Please wait.." textColor="#098572"></ngx-ui-loader>
 <div ngxUiLoaderBlurred (blur)="7"></div>
-<!-- <router-outlet></router-outlet> -->
-<app-homepage></app-homepage>
+<router-outlet></router-outlet>
