--- a/src/app/employee/emp-home/emp-home.component.css
+++ b/src/app/employee/emp-home/emp-home.component.css
@@ -1,151 +1,205 @@
-.main_thumbnail {
-    padding-right: 12px;
-    padding-top: 61px;
+mat-sidenav{
+  background-color:#14595c;
+  height:100%;    
+  width:250px;   
+}
+
+mat-sidenav-content{
+  height: 100vh;
+  background-color: whitesmoke;
+}
+.main{
+  padding: 0px 1px 1px 1px ;
+}
+mat-toolbar{
+  background-color:#14595c;
+  justify-content: space-between;  
+  height: 62px; 
+  position: fixed;
+  top: 0px;
+  z-index: 10;
+  
+}
+mat-icon{
+  color: whitesmoke;
+  cursor: pointer;
+}
+
+.loginas{
+  font-size: 18px;
+  color: whitesmoke;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  position: fixed;
+  right: 45px;
+  top: 16px;
+  /* margin-right: 260px; */
+}
+.user-icon{
+  /* position: relative; */
+  /* top: 7px; */
+  position: fixed;
+  right: 16px;
+  top: 20px;
+}
+table {
+  width: 100%;
+}
+a{
+  text-decoration: none;
+ 
+}
+a button{
+  color: whitesmoke;
+  text-align: center;
+}
+@media(min-width:769px) and (max-width:1180px){
+  .main{
+    padding: 0px;
   }
-  
-  .thumbnail {
-    width: calc(25% - 20px);
-    height: 100px;
-    background-color: rgb(174, 199, 204);
-    border-left: 5px solid#14595c;
-    border-radius: 5px;
-    float: left;
-    margin-top: 20px;
-    margin-left: 18px;
+}
+
+@media(min-width:420px)and (max-width:768px) {
+  .loginas{
+     display: none;
   }
-  
-  
-  mat-icon {
-    width: 40px;
-    height: 40px;
-    font-size: 40px;
-    float: right;
-    margin: 20px;
-    color: #14595c;
-    margin-top: 30px;
-  
+  .main{
+    padding: 0px;
   }
+}
+@media(max-width:420px){
+  mat-sidenav{        
+      width:170px;
+  } 
   
-  .thumbnail span {
-    font-size: 20px;
-    line-height: 35px;
-    margin-left: 20px;
-  }
+  .loginas{
+    display: none;
+ }  
+ .main{
+  padding: 0px;
+}  
+}
+
+
+/* for dashboard */
+
+
+.top {
+  width: 100%;
+  height: 62px;
+  z-index: 9;
+  background-color: rgb(20, 89, 92);
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.5);
+  position: sticky;
+  top: 0px;
+
+}
+
+.title_text {
+  color: whitesmoke;
+  font-size: 23px;
+  position: relative;
+  top: 20px;
+  margin-left: 20px;
+}
+
+.menu-button {
+  width: 100%;
+  font-size: 16px;
+  color: whitesmoke;
+  /* margin-top:7px; */
+  display: flex;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.menu-button span {
+  margin-left: 10px;
+}
+
+.menu-button:hover:not(.active) {
+  background-color: #14595c;
+
+}
+
+.active {
+  background-color: #05363c;
+  z-index: 6;
+}
+
+.menu-button:focus {
+  background-color: rgb(15, 108, 108);
+  box-shadow: 5px 5px 5px rgb(0 0 0 / 50%) inset;
+}
+
+#report_dropdown_item {
+  display: none;
+}
+
+#dropdown_item {
+  display: none;
+}
+#dropdown_item2 {
+  display: none;
+}
+
+.report_dropdown:hover .report_dropdown_item {
+  display: block;
+}
+
+button {
+  border-bottom: 0.2px solid #23a09cd6;
+  transition: 0.5s;
+
+}
+
+button:hover {
+  padding-left: 25px;
+}
+#dropdown_item button{
+  padding-left: 35px;
+}
+#dropdown_item button:hover{
+  padding-left: 45px;
   
-  .thumbnail span {
-    line-height: 30px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-shadow: 1px 1px 1px rgb(112, 110, 110);
-    text-align: left;
-  }
+}
+#dropdown_item2 button{
+  padding-left: 35px;
+}
+#dropdown_item2 button:hover{
+  padding-left: 45px;
   
-  @media(min-width:920px)and (max-width:1199px) {
-    .main_thumbnail {
-      padding-right: 0px;
-    }
-    .thumbnail{
-      width: 32%;
-    height: 100px;
-    float: left;
-    margin-top: 10px;
-    margin-left: 1%;
+}
+#report_dropdown_item button{
+  padding-left: 35px;
+}
+#report_dropdown_item button:hover{
+  padding-left: 45px;
+  
+}
+
+
+
+/* ===========================================media Query================================================== */
+
+@media(max-width:420px) {
+
+  img {
+      width: 50px;
+      height: 40px;
   }
 
-    .thumbnail span {
+  .title_text {
       font-size: 20px;
-      line-height: 25px;
-      margin-left: 10px;
-    }
-  
-    mat-icon {
-      width: 30px;
-      height: 30px;
-      font-size: 30px;
-      margin-top: 35px;
-    }
-  
   }
-  
-  @media(min-width:768px)and (max-width:919px) {
-    .main_thumbnail {
-      padding-right: 0px;
-    }
-    .thumbnail{
-      width: 32%;
-      height: 100px;
-      margin-left: 1%;
-      margin-right: 0px;
-      margin-top: 8px
-    }
-  
-  
-    .thumbnail span {
-      font-size: 20px;
-      line-height: 25px;
-      margin-left: 10px;
-    }
-  
-    mat-icon {
-      width: 30px;
-      height: 30px;
-      font-size: 30px;
-      margin-top: 35px;
-    }
-  
-  }
-  
-  @media(min-width:420px)and (max-width:767px) {
-    .main_thumbnail {
-      padding-right: 0px;
-    }
 
-    .thumbnail {
-      width: 90%;
-      height: 100px;
-      float: left;
-      margin: 5% 0% 0% 5%;
-     
-    }
-  
-    .thumbnail span {
-      font-size: 20px;
-      line-height: 25px;
-      margin-left: 10px;
-    }
-  
-    mat-icon {
-      font-size: 28px;
-      margin: 35px 0px 0px 0px;
-      
-    }
-  
+  .menu-button {
+      font-size: 13px;
+      color: whitesmoke;
   }
-  
-  @media(max-width:420px) {
-    .main_thumbnail {
-      padding-right: 20px;
-    }
-  
-    .thumbnail {
-      width: 100%;
-      height: 100px;
-      margin-top: 10px;
-      /* float: left; */
-      margin-left: 10px;
-  
-    }
-  
-    .thumbnail span {
-      font-size: 15px;
-      line-height: 25px;
-      margin-left: 10px;
-    }
-  
-    mat-icon {
-      width: 25px;
-      height: 25px;
-      font-size: 25px;
-      margin-top: 35px;
-      margin-left: 0px;
-    }
+  .menu-button span{
+      margin-left: 5px;
   }
+  .menu-button mat-icon{
+      font-size: 16px;
+      margin-top: 6px;
+  }
+}
