--- a/src/app/employee/emp-dashboard/emp-dashboard.component.html
+++ b/src/app/employee/emp-dashboard/emp-dashboard.component.html
@@ -32,5 +32,13 @@
         </div>
     </a>
 
+    <a [routerLink]="['expense']">
+        <div class="thumbnail">
+            <mat-icon>receipt</mat-icon><br>
+            <span style="color:	rgb(255, 255, 255)"><b>{{total_expense}}</b></span><br>
+            <span style="color:#14595c;">Expense</span>
+        </div>
+    </a>
+
   
     </div>
