--- a/src/app/admin/add-edit-material-handover/add-edit-material-handover.component.html
+++ b/src/app/admin/add-edit-material-handover/add-edit-material-handover.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
   <span class="example-spacer">Material Handover</span>
-  <mat-icon mat-dialog-close routerLink="/material_handover">cancel</mat-icon>
+  <mat-icon mat-dialog-close >cancel</mat-icon>
 </mat-toolbar>
 <span>Select Employee</span>
 <div mat-dialog-content>
