--- a/src/app/admin/add-edit-production/add-edit-production.component.css
+++ b/src/app/admin/add-edit-production/add-edit-production.component.css
@@ -6,6 +6,7 @@
 }
 
 form .column {
+  
   height: 175px;
 }
 
@@ -24,7 +25,7 @@ mat-toolbar {
 
 
 mat-form-field {
-  margin-right: 5px;
+  margin-right: 10px;
   top: 5px;
 }
 
@@ -253,7 +254,8 @@ mat-toolbar {
 
 
 mat-form-field {
-  margin-right: 5px;
+  width: 290px;
+  margin-right: 15px;
   top: 5px;
 }
 
