--- a/src/app/admin/add-edit-production/add-edit-production.component.html
+++ b/src/app/admin/add-edit-production/add-edit-production.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
     <span class="example-spacer">Production</span>
-    <mat-icon mat-dialog-close routerLink="/production">cancel</mat-icon>
+    <mat-icon mat-dialog-close >cancel</mat-icon>
 </mat-toolbar>
 <span>Select Employee</span>
 <div mat-dialog-content>
@@ -106,11 +106,7 @@
                   <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Quantity</th>
                   <td class="data" mat-cell *matCellDef="let row">{{row.production_quantity}}</td>
                 </ng-container>
-    
-                <ng-container matColumnDef="production_date">
-                  <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
-                  <td class="data" mat-cell *matCellDef="let row">{{row.production_date}}</td>
-                </ng-container>
+  
                 <ng-container matColumnDef="labor_cost">
                   <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Labor Cost</th>
                   <td class="data" mat-cell *matCellDef="let row">{{row.labor_cost}}</td>
@@ -128,13 +124,13 @@
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                 <tr class="mat-row" *matNoDataRow>
-                  <td class="mat-cell" colspan="7">No data show"{{input.value}}"</td>
+                  <td class="mat-cell" colspan="8">No data show"{{input.value}}"</td>
                 </tr>
               </table>
             </div>
           </form>
         </div>
-        <mat-paginator #paginatorRef [pageSizeOptions]="[5, 10, 100]" aria-label="Select page of users"></mat-paginator>
+        <mat-paginator #paginatorRef [pageSizeOptions]="[5]" aria-label="Select page of users"></mat-paginator>
       </div>
     </div>
 
