--- a/src/app/employee/emp-home/emp-home.component.html
+++ b/src/app/employee/emp-home/emp-home.component.html
@@ -31,6 +31,11 @@
                     <mat-icon>receipt</mat-icon>
                     <span>Reciept</span>
                 </button>
+                
+                <button mat-button class="menu-button" [routerLink]="['expense']" routerLinkActive="active">
+                    <mat-icon>receipt</mat-icon>
+                    <span>Expense</span>
+                </button>
                 </div>
             </div>
         </div>
