--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,5 +1,8 @@
-<div class="main_thumbnail">
-    <a [routerLink]="['party']">
+<div class="main_thumbnail" >
+
+
+    <span  [hidden]="this.login_data_check.emp_id > 0">
+    <a [routerLink]="['party']" >
         <div class="thumbnail">
             <mat-icon>person</mat-icon><br>
             <span style="color:	rgb(255, 255, 255)"><b>{{total_party}}</b></span><br>
@@ -7,7 +10,7 @@
         </div>
     </a>
 
-    <a [routerLink]="['unit']">
+    <a [routerLink]="['unit']" >
         <div class="thumbnail">
             <mat-icon>ac_unit</mat-icon><br>
             <span style="color:	rgb(255, 255, 255)"><b>{{total_unit}}</b></span><br>
@@ -15,7 +18,7 @@
         </div>
     </a>
 
-    <a [routerLink]="['gst']">
+    <a [routerLink]="['gst']" >
         <div class="thumbnail">
             <mat-icon>category</mat-icon><br>
             <span style="color:	rgb(255, 255, 255) "><b>{{total_gst}}</b></span><br>
@@ -23,7 +26,7 @@
         </div>
     </a>
 
-    <a [routerLink]="['weigth']">
+    <a [routerLink]="['weigth']" >
         <div class="thumbnail">
             <mat-icon>line_weight</mat-icon><br>
             <span style=" color:rgb(255, 255, 255)"><b>{{total_weight}}</b></span><br>
@@ -31,7 +34,7 @@
         </div>
     </a>
 
-    <a [routerLink]="['size']">
+    <a [routerLink]="['size']" >
         <div class="thumbnail">
             <mat-icon>category</mat-icon><br>
             <span style="color:	rgb(255, 255, 255)"><b>{{total_size}}</b></span><br>
@@ -39,7 +42,7 @@
         </div>
     </a>
 
-    <a [routerLink]="['category']">
+    <a [routerLink]="['category']" >
         <div class="thumbnail">
             <mat-icon>category</mat-icon><br>
             <span style="color:	rgb(255, 255, 255)"><b>{{total_category}}</b></span><br>
@@ -47,21 +50,21 @@
         </div>
     </a>
 
-    <a [routerLink]="['item']">
+    <a [routerLink]="['item']" >
         <div class="thumbnail">
             <mat-icon> group_work </mat-icon><br>
             <span style="color:	rgb(255, 255, 255)"><b>{{total_item}}</b></span><br>
             <span style="color: #14595c;">Item</span>
         </div>
     </a>
-    <a [routerLink]="['product']">
+    <a [routerLink]="['product']" >
         <div class="thumbnail">
             <mat-icon>area_chart</mat-icon><br>
             <span style="color:	rgb(255, 255, 255)"><b>{{total_product}}</b></span><br>
             <span style="color: #14595c;">Product</span>
         </div>
     </a>
-    <a [routerLink]="['employee']">
+    <a [routerLink]="['employee']" >
         <div class="thumbnail">
             <mat-icon>people</mat-icon><br>
             <span style="color:	rgb(255, 255, 255)"><b>{{total_employee}}</b></span><br>
@@ -69,21 +72,21 @@
         </div>
     </a>
 
-    <a [routerLink]="['customer']">
+    <a [routerLink]="['customer']" >
         <div class="thumbnail">
             <mat-icon>supervisor_account</mat-icon><br>
             <span style="color:	rgb(255, 255, 255)"><b>{{total_customer}}</b></span><br>
             <span style="color: #14595c;">Customer</span>
         </div>
     </a>
-    <a [routerLink]="['area']">
+    <a [routerLink]="['area']" >
         <div class="thumbnail">
             <mat-icon>location_on</mat-icon><br>
             <span style="color:	rgb(255, 255, 255)"><b>{{total_area}}</b></span><br>
             <span style="color:#14595c;">Area</span>
         </div>
-
-        <a [routerLink]="['purchase']">
+</a>
+        <a [routerLink]="['purchase']" >
             <div class="thumbnail">
                 <mat-icon>shoping</mat-icon><br>
                 <span style="color:	rgb(255, 255, 255)"><b>{{total_purchase}}</b></span><br>
@@ -114,7 +117,7 @@
                 <span style="color:#14595c;">Area Allocate</span>
             </div>
         </a>
-
+</span>
         <a [routerLink]="['sale']">
             <div class="thumbnail">
                 <mat-icon>local_grocery_store</mat-icon><br>
@@ -139,7 +142,7 @@
             </div>
         </a>
 
-        <a [routerLink]="['account']">
+        <a [routerLink]="['account']"  [hidden]="this.login_data_check.emp_id > 0">
             <div class="thumbnail">
                 <mat-icon>account_circle</mat-icon><br>
                 <span style="color:	rgb(255, 255, 255)"><b>{{total_account}}</b></span><br>
@@ -154,3 +157,4 @@
                 <span style="color:#14595c;">Expense</span>
             </div>
         </a>
+        </div>
