--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -11,7 +11,7 @@
                         <span class="loginas">Login As : {{name}}</span>
                         <mat-icon class="user-icon" [matMenuTriggerFor]="menu">account_circle</mat-icon>
                         <mat-menu #menu="matMenu" class="myMenu">
-                        <a href="/home">  <button mat-menu-item  (click)="Logout()" >logout</button>   </a>                               
+                        <a [routerLink]="['home']">  <button mat-menu-item  (click)="Logout()" >logout</button>   </a>                               
                         </mat-menu>
                     </div>
                 </mat-toolbar>
